dev/POCO/TEST/NEG/NSTRUC08.POC
/* This tests for yet another misplaced 'struct' */
#pragma poco echo "expect>expecting a number, variable, or string got 'struct'"

main()
{
int i;

for (i=0; struct < 10; ++)
	;
puts("This shouldn't compile");
}

